# prompt-pidgeon

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  justfile  pyproject.toml
.cursor/rules/: CURSOR.mdc  code-ticket.mdc  commit-code.mdc  project-specific.mdc  python-generic.mdc
.github/workflows/: publish-container.yml  static-analysis.yml  test.yml
docs/: 2025-07-19-implementation-plan.md  ci.md  prd.md
prompt_pidgeon/: cli.py
prompt_pidgeon/adapters/: __init__.py
prompt_pidgeon/cli/: __init__.py
prompt_pidgeon/config/: __init__.py
prompt_pidgeon/core/: __init__.py
prompt_pidgeon/models/: __init__.py  config.py  core.py
scripts/: e2e-poc.py  langfuse-poc.py  open-webui-poc.py
scripts/poc/: data-models.py
tests/unit/models/: test_coding_assistants.py  test_config.py  test_core.py  test_filesystem.py  test_langfuse.py  test_openwebui.py
